[project]
name = "my-tools"
version = "0.1.0"
description = "An umbrella of various tools I use"
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "pyscript_to_package @ git+https://github.com/brettviren/pyscript-to-package",
  "proxy_web_ssh @ git+https://github.com/brettviren/proxy-web-ssh",
  "herbie @ git+https://github.com/brettviren/herbie",
  "barpyrus @ git+https://github.com/t-wissmann/barpyrus",
  "ampersand @ git+https://github.com/brettviren/ampersand",
  "miageru @ git+https://github.com/brettviren/miageru",
  "myougiden @ git+https://github.com/brettviren/myougiden",
  "titome @ git+https://github.com/brettviren/titome",
  "rephile @ git+https://github.com/brettviren/rephile",
  "dune_people @ git+https://github.com/brettviren/dune-people",
  "wget_spider @ git+https://github.com/brettviren/wget-spider",
  "imp @ git+https://github.com/brettviren/imp",
  "passdb @ git+https://github.com/brettviren/passdb",
]
[project.readme]
file = "README.org"
content-type = "text/org"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
